refactor and tidy up comments